--- a/trying_fileworking.ipynb
+++ b/trying_fileworking.ipynb
@@ -16,6 +16,7 @@
     "        - Сохраненные картинки\n",
     "        \n",
     "- Копировать файлы на яндекс-диск, обновляя их.\n",
+    "\n",
     "\n"
    ]
   },
@@ -27,10 +28,30 @@
    },
    "outputs": [],
    "source": [
+    "# для домашнего\n",
     "source_dir = 'C:/Users/Aleksej/'\n",
     "destination_dir = 'C:/Users/Aleksej\\YandexDisk/Документы/handmade/python/notebook/'\n",
+    "except_list = []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# для ноута\n",
+    "source_dir = 'C:/Users/skvo/'\n",
+    "destination_dir = 'C:/Users/Skvo\\YandexDisk/Документы/program files/!notebook_pf/python/notebook/'\n",
     "except_list = []"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -40,6 +61,7 @@
    },
    "outputs": [],
    "source": [
+    "# Список файлов-исключений\n",
     "except_list = ['.anaconda',\n",
     " '.conda',\n",
     " '.condarc',\n",
@@ -83,6 +105,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true
@@ -105,64 +134,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['.anaconda',\n",
-       " '.conda',\n",
-       " '.condarc',\n",
-       " '.ipynb_checkpoints',\n",
-       " '.ipython',\n",
-       " '.jupyter',\n",
-       " '.matplotlib',\n",
-       " 'Anaconda3',\n",
-       " 'AppData',\n",
-       " 'Application Data',\n",
-       " 'Contacts',\n",
-       " 'Cookies',\n",
-       " 'Desktop',\n",
-       " 'Documents',\n",
-       " 'Downloads',\n",
-       " 'experiment.ipynb',\n",
-       " 'Favorites',\n",
-       " 'Links',\n",
-       " 'Local Settings',\n",
-       " 'Music',\n",
-       " 'NetHood',\n",
-       " 'NTUSER.DAT',\n",
-       " 'ntuser.dat.LOG1',\n",
-       " 'ntuser.dat.LOG2',\n",
-       " 'NTUSER.DAT{016888bd-6c6f-11de-8d1d-001e0bcde3ec}.TM.blf',\n",
-       " 'NTUSER.DAT{016888bd-6c6f-11de-8d1d-001e0bcde3ec}.TMContainer00000000000000000001.regtrans-ms',\n",
-       " 'NTUSER.DAT{016888bd-6c6f-11de-8d1d-001e0bcde3ec}.TMContainer00000000000000000002.regtrans-ms',\n",
-       " 'ntuser.ini',\n",
-       " 'pandas_pg.ipynb',\n",
-       " 'Pictures',\n",
-       " 'PrintHood',\n",
-       " 'pycbrf-master',\n",
-       " 'Recent',\n",
-       " 'Saved Games',\n",
-       " 'Searches',\n",
-       " 'SendTo',\n",
-       " 'trying_fileworking.ipynb',\n",
-       " 'trying_xml.ipynb',\n",
-       " 'Videos',\n",
-       " 'YandexDisk',\n",
-       " 'Главное меню',\n",
-       " 'Мои документы',\n",
-       " 'Шаблоны']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "files"
+    "#files[:5]"
    ]
   },
   {
@@ -287,6 +263,34 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
