--- a/trying_fileworking.ipynb
+++ b/trying_fileworking.ipynb
@@ -6,19 +6,54 @@
    "source": [
     "## Работа с файлами\n",
     "\n",
-    "- регулярное бэкапирование файлов на внешний носитель, если подключен носитель из списка\n",
-    "    - копировать файлы с телефона на компьютер\n",
-    "        - данные с трекера\n",
-    "        - фотографии\n",
-    "        - скачанные картинки/музыка\n",
-    "    - делать бекапы на флешку\n",
-    "        - проекты\n",
-    "        - Сохраненные картинки\n",
-    "        \n",
-    "- Копировать файлы на яндекс-диск, обновляя их.\n",
+    "- регулярное бэкапирование файлов на внешний носитель, если подключен носитель из списка  \n",
+    "    - делать бекапы на флешку  \n",
+    "        - проекты  \n",
+    "        - Сохраненные картинки  \n",
+    "\n",
+    "- копировать файлы с телефона на компьютер  \n",
+    "    - данные с трекера  \n",
+    "    - фотографии  \n",
+    "    - скачанные картинки/музыка \n",
+    "    \n",
+    "  \n",
+    "\n",
+    "- Копировать файлы на яндекс-диск, обновляя их.  \n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -117,9 +152,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import os "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -212,9 +245,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "import shutil"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -258,11 +289,240 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "### Копировать с телефона"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# для копирования телефон - WD(Elements)\n",
+    "# Картинки\n",
+    "\n",
+    "source_dir = 'Этот компьютер/ZB602KL/Внутренний общий накопитель/Telegram/Telegram Images'\n",
+    "destination_dir = 'E:/downloads/pic/tg_pic'\n",
+    "except_list = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "environ{'ALLUSERSPROFILE': 'C:\\\\ProgramData',\n",
+       "        'APPDATA': 'C:\\\\Users\\\\Sam\\\\AppData\\\\Roaming',\n",
+       "        'COMMONPROGRAMFILES': 'C:\\\\Program Files\\\\Common Files',\n",
+       "        'COMMONPROGRAMFILES(X86)': 'C:\\\\Program Files (x86)\\\\Common Files',\n",
+       "        'COMMONPROGRAMW6432': 'C:\\\\Program Files\\\\Common Files',\n",
+       "        'COMPUTERNAME': 'DESKTOP-I5R1400',\n",
+       "        'COMSPEC': 'C:\\\\Windows\\\\system32\\\\cmd.exe',\n",
+       "        'DRIVERDATA': 'C:\\\\Windows\\\\System32\\\\Drivers\\\\DriverData',\n",
+       "        'FPS_BROWSER_APP_PROFILE_STRING': 'Internet Explorer',\n",
+       "        'FPS_BROWSER_USER_PROFILE_STRING': 'Default',\n",
+       "        'GDAL_DATA': 'C:\\\\Program Files\\\\PostgreSQL\\\\12\\\\gdal-data',\n",
+       "        'HOMEDRIVE': 'C:',\n",
+       "        'HOMEPATH': '\\\\Users\\\\Sam',\n",
+       "        'LOCALAPPDATA': 'C:\\\\Users\\\\Sam\\\\AppData\\\\Local',\n",
+       "        'LOGONSERVER': '\\\\\\\\DESKTOP-I5R1400',\n",
+       "        'NUMBER_OF_PROCESSORS': '8',\n",
+       "        'ONEDRIVE': 'C:\\\\Users\\\\Sam\\\\OneDrive',\n",
+       "        'OPENSSL_CONF': 'C:\\\\Program Files\\\\PostgreSQL\\\\psqlODBC\\\\etc\\\\openssl.cnf',\n",
+       "        'OS': 'Windows_NT',\n",
+       "        'PATH': 'C:\\\\Users\\\\Sam\\\\anaconda3;C:\\\\Users\\\\Sam\\\\anaconda3\\\\Library\\\\mingw-w64\\\\bin;C:\\\\Users\\\\Sam\\\\anaconda3\\\\Library\\\\usr\\\\bin;C:\\\\Users\\\\Sam\\\\anaconda3\\\\Library\\\\bin;C:\\\\Users\\\\Sam\\\\anaconda3\\\\Scripts;C:\\\\Windows\\\\system32;C:\\\\Windows;C:\\\\Windows\\\\System32\\\\Wbem;C:\\\\Windows\\\\System32\\\\WindowsPowerShell\\\\v1.0\\\\;C:\\\\Windows\\\\System32\\\\OpenSSH\\\\;C:\\\\Program Files\\\\Git\\\\cmd;C:\\\\Program Files (x86)\\\\GitExtensions\\\\;C:\\\\Users\\\\Sam\\\\AppData\\\\Local\\\\Microsoft\\\\WindowsApps;',\n",
+       "        'PATHEXT': '.COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC',\n",
+       "        'POSTGIS_ENABLE_OUTDB_RASTERS': '1',\n",
+       "        'POSTGIS_GDAL_ENABLED_DRIVERS': 'GTiff PNG JPEG GIF XYZ DTED USGSDEM AAIGrid',\n",
+       "        'PROCESSOR_ARCHITECTURE': 'AMD64',\n",
+       "        'PROCESSOR_IDENTIFIER': 'AMD64 Family 23 Model 24 Stepping 1, AuthenticAMD',\n",
+       "        'PROCESSOR_LEVEL': '23',\n",
+       "        'PROCESSOR_REVISION': '1801',\n",
+       "        'PROGRAMDATA': 'C:\\\\ProgramData',\n",
+       "        'PROGRAMFILES': 'C:\\\\Program Files',\n",
+       "        'PROGRAMFILES(X86)': 'C:\\\\Program Files (x86)',\n",
+       "        'PROGRAMW6432': 'C:\\\\Program Files',\n",
+       "        'PSMODULEPATH': 'C:\\\\Program Files\\\\WindowsPowerShell\\\\Modules;C:\\\\Windows\\\\system32\\\\WindowsPowerShell\\\\v1.0\\\\Modules',\n",
+       "        'PUBLIC': 'C:\\\\Users\\\\Public',\n",
+       "        'SESSIONNAME': 'Console',\n",
+       "        'SYSTEMDRIVE': 'C:',\n",
+       "        'SYSTEMROOT': 'C:\\\\Windows',\n",
+       "        'TEMP': 'C:\\\\Users\\\\Sam\\\\AppData\\\\Local\\\\Temp',\n",
+       "        'TMP': 'C:\\\\Users\\\\Sam\\\\AppData\\\\Local\\\\Temp',\n",
+       "        'USERDOMAIN': 'DESKTOP-I5R1400',\n",
+       "        'USERDOMAIN_ROAMINGPROFILE': 'DESKTOP-I5R1400',\n",
+       "        'USERNAME': 'Sam',\n",
+       "        'USERPROFILE': 'C:\\\\Users\\\\Sam',\n",
+       "        'WINDIR': 'C:\\\\Windows',\n",
+       "        'CONDA_PREFIX': 'C:\\\\Users\\\\Sam\\\\anaconda3',\n",
+       "        'KERNEL_LAUNCH_TIMEOUT': '40',\n",
+       "        'JPY_INTERRUPT_EVENT': '2160',\n",
+       "        'IPY_INTERRUPT_EVENT': '2160',\n",
+       "        'JPY_PARENT_PID': '2244',\n",
+       "        'TERM': 'xterm-color',\n",
+       "        'CLICOLOR': '1',\n",
+       "        'PAGER': 'cat',\n",
+       "        'GIT_PAGER': 'cat',\n",
+       "        'MPLBACKEND': 'module://ipykernel.pylab.backend_inline'}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.environ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'key' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-5adfb64c68ba>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mputenv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'key' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "os.putenv(key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source_dir = 'Computer'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source_dir = os.path.join('Этот компьютер', 'ZB602KL', 'Внутренний общий накопитель', 'Telegram', 'Telegram Images')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "abspath() missing 1 required positional argument: 'path'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-e24dae7b72ec>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabspath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: abspath() missing 1 required positional argument: 'path'"
+     ]
+    }
+   ],
+   "source": [
+    "os.path.abspath()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Этот компьютер\\\\ZB602KL\\\\Внутренний общий накопитель\\\\Telegram\\\\Telegram Images'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "source_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] Системе не удается найти указанный путь: 'Computer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-22-ad4ba5b53be6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfiles\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msource_dir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] Системе не удается найти указанный путь: 'Computer'"
+     ]
+    }
+   ],
+   "source": [
+    "files = os.listdir(source_dir) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_to_copy = [element for i, element in enumerate(files) if element not in except_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_to_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for filetocopy in file_to_copy:\n",
+    "    shutil.copyfile(source_dir + filetocopy, destination_dir + filetocopy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -272,6 +532,165 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:\\\\Users\\\\Sam\\\\documents\\\\repo\\\\misc'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.abspath(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['$AV_AVG',\n",
+       " '$Recycle.Bin',\n",
+       " '$WinREAgent',\n",
+       " '22',\n",
+       " 'Documents and Settings',\n",
+       " 'downloads',\n",
+       " 'DumpStack.log.tmp',\n",
+       " 'hiberfil.sys',\n",
+       " 'MSOCache',\n",
+       " 'pagefile.sys',\n",
+       " 'PerfLogs',\n",
+       " 'Program Files',\n",
+       " 'Program Files (x86)',\n",
+       " 'ProgramData',\n",
+       " 'Recovery',\n",
+       " 'swapfile.sys',\n",
+       " 'System Volume Information',\n",
+       " 'Users',\n",
+       " 'Windows']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir(path='c:\\\\')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "LoadLibrary() argument 1 must be str, not None",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-964962aa82d0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mpymtp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\pymtp.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[1;31m# this on.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[0m_module_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mctypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_library\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"mtp\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m \u001b[0m_libmtp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mctypes\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mCDLL\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m_module_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;31m# ----------\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\ctypes\\__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, name, mode, handle, use_errno, use_last_error)\u001b[0m\n\u001b[0;32m    362\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    363\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mhandle\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 364\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_handle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_dlopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_name\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    365\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    366\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_handle\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mhandle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: LoadLibrary() argument 1 must be str, not None"
+     ]
+    }
+   ],
+   "source": [
+    "import pymtp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement wmdlib (from versions: 0.1dev-r8, 0.1dev-r17)\n",
+      "ERROR: No matching distribution found for wmdlib\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install wmdlib\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: Could not find a version that satisfies the requirement ctypes (from versions: none)\n",
+      "ERROR: No matching distribution found for ctypes\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install ctypes"
+   ]
   },
   {
    "cell_type": "code",
@@ -311,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
