--- a/obsidian_vlt/07_05_qlua.md
+++ b/obsidian_vlt/07_05_qlua.md
@@ -1,3 +1,6 @@
 
 
-
+Какие задачи могут быть выполнены на qlua
+- мониторинг цен, объемов торгов по списку инструментов
+- мониторинг доступных к торговле облигаций и их параметры
+- боты торговые
